[package]
authors = ["Eirik Albrigtsen <analsandblaster@gmail.com>"]
name = "volf"
version = "0.0.0"

[[bin]]
doc = false
name = "volf"
path = "src/main.rs"

[dependencies]
clap = "*"
env_logger = "*"
hyper = "*"
json = "0.9.1"
log = "*"
reroute = "*"
rustc-serialize = "*"
url = "*"

[lib]
name = "volf"
path = "src/lib.rs"

[[test]]
harness = false
name = "testmain"
